# infernobot

./: .gitignore  README.md  guilds.json  package-lock.json  package.json  permissions.json
clis/2/: README.md  package-lock.json  package.json
clis/2/src/: index.js  index.ts  interactive.ts
clis/2/src/tools/: crypto.js  crypto.ts  docker.js  docker.ts  file.js  file.ts  git.js  git.ts  network.js  network.ts  system.js  system.ts  text.js  text.ts
projects/vladx_lang/: Cargo.toml  registry.db-shm  registry.db-wal
projects/vladx_lang/registry-node/: package-lock.json  package.json  registry.db-shm  registry.db-wal
projects/vladx_lang/registry-node/src/: auth.js  db.js  routes.js  (+1 more)
projects/vladx_lang/vladx/: Cargo.toml
projects/vladx_lang/vladx/src/: bytecode.rs  compilatore.rs  interprete.rs  lexer.rs  lint.rs  main.rs  parser.rs  stdlib.rs  valore.rs  vm.rs
projects/vladx_lang/vpm/: Cargo.toml
projects/vladx_lang/vpm/src/: config.rs  main.rs  manifest.rs  registry.rs
projects/vladx_lang/vpm/src/comandi/: auth.rs  init.rs  install.rs  mod.rs  publish.rs  run.rs  search.rs  setup.rs  uninstall.rs  unpublish.rs  update.rs
projects/vladx_tests/: main.vlx  vladx.json
src/: cli.js  db.js  index.js  modUtils.js
src/commands/: admin.js  communication.js  guildrequest.js  guildrequests.js  mod.js  ping.js  reloadguilds.js  reloadperms.js  staff.js
src/handlers/: perms.js  settings.js  staff.js
src/locales/: en.json  it.json  ru.json
src/ui/: components.js  designSystem.js
src/utils/: events.js  locale.js  log.js  owners.js  perms.js  scheduler.js
(+8 files in other folders)
