[package]
name = "vladx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vladx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
