[package]
name = "vpm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
dirs = "5.0"
flate2 = "1.0"
tar = "0.4"
rpassword = "7.3"
